fix: code wrapping issue

--- a/src/codeblock.css
+++ b/src/codeblock.css
@@ -7,7 +7,7 @@ pre[class*="language-"] {
   color: #383a42; /* base00 */
   /* font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace; */
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
